Proyecto_ws/log/build_2024-05-27_00-52-35/galletas_classifier/stderr.log
  File "/home/camilo/Proyecto_ws/install/galletas_classifier/lib/python3.10/site-packages/galletas_classifier/classification_sub.py", line 22
    name = class
           ^^^^^
SyntaxError: invalid syntax

